--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "new_password",
+    "password": "password",
     "database": "food_order_system",
     "host": "127.0.0.1",
     "dialect": "mysql"
